--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <body>
     <h1>Hello World</h1>
     <p>This is a basic HTML document.</p>
+    <a href="https://www.example.com">Visit Example</a>
 </body>
 </html>
